Fixed letter-spacing for h5,h6
They differ @small, are the same medium+

Plus had to fix the old bourbon rem() now that we are using the sass rem-calc()

--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -21,5 +21,19 @@ h6 {
 h5,
 h6 {
 	text-transform: uppercase;
-	letter-spacing: rem(1.5);
+}
+
+h5 {
+	letter-spacing: rem-calc(1.2);
+}
+
+h6 {
+	letter-spacing: rem-calc(1);
+}
+
+@include breakpoint(medium) {
+	h5,
+	h6 {
+		letter-spacing: rem-calc(1.5);
+	}
 }
